--- a/src/android/barcodescanner.gradle
+++ b/src/android/barcodescanner.gradle
@@ -7,6 +7,7 @@ repositories{
 
 dependencies {
     implementation(name:'barcodescanner-release-2.1.5', ext:'aar')
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
 }
 
 android {
