--- a/src/android/barcodescanner.gradle
+++ b/src/android/barcodescanner.gradle
@@ -6,7 +6,7 @@ repositories{
 }
 
 dependencies {
-    implementation(name:'barcodescanner-release-2.1.5', ext:'aar')
+    //implementation(name:'barcodescanner-release-2.1.5', ext:'aar')
 }
 
 android {
